[gd_scene load_steps=12 format=3 uid="uid://mlu3x1hqmiar"]

[ext_resource type="Script" uid="uid://b72w34m4o6m32" path="res://scripts/dummy.gd" id="1_vg0i5"]
[ext_resource type="Texture2D" uid="uid://ga147tkc68eu" path="res://art/characters/npc 10 doomie.png" id="2_vg0i5"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_o7efr"]
radius = 9.0

[sub_resource type="AtlasTexture" id="AtlasTexture_qpypa"]
atlas = ExtResource("2_vg0i5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_74nqk"]
atlas = ExtResource("2_vg0i5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_je7tt"]
atlas = ExtResource("2_vg0i5")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7efr"]
atlas = ExtResource("2_vg0i5")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vic5"]
atlas = ExtResource("2_vg0i5")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4rx4"]
atlas = ExtResource("2_vg0i5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_je7tt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpypa")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_74nqk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_je7tt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7efr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vic5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4rx4")
}],
"loop": true,
"name": &"punched",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_vg0i5"]
radius = 15.0

[node name="Dummy" type="CharacterBody2D"]
script = ExtResource("1_vg0i5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CapsuleShape2D_o7efr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -1)
sprite_frames = SubResource("SpriteFrames_je7tt")

[node name="hitbox" type="Area2D" parent="."]
position = Vector2(0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("CircleShape2D_vg0i5")

[node name="cooldown" type="Timer" parent="."]

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="hitbox" to="." method="_on_hitbox_area_exited"]
[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
